# triangles_playground

./: .gitignore  Cargo.toml  Trunk.toml  index.html  style.scss
node/: package-lock.json
src/: main.rs  route.rs
src/components/: canvas.rs  canvas2d.rs  mod.rs  render2d.rs
src/components/render2d/: mod.rs  tick_sequence.rs
src/pages/: basic2d.rs  mod.rs  test3d.rs  triangle_cut_2d.rs
