[package]
name = "triangle-play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.5.0"
yew = { version = "0.20.0", features = ["csr"] }
patternfly-yew = "0.5.0-alpha.2"
log = "0.4"
wasm-logger = "0.2.0"
yew-nested-router = { version = "0.2" }
gloo = "0.8"
triangles = { path = "../triangles" }
num-traits = "0.2.15"
three-d = "0.15.0"
glow = "0.12.3"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "TextMetrics", 'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader', ]